# aws-iot-device-sdk-cpp

./: .gitignore  .gitmodules  CMakeLists-rapidjson.txt.in  CMakeLists-sanitizers.txt.in  CMakeLists.txt  CONTRIBUTING.md  Changelog.md  ClangToolchainFile.cmake  DevGuide.md  GreengrassDiscovery.md  KnownIssues.md  LICENSE  NOTICE  Platform.md  README.md  ToolchainFile.cmake
.github/ISSUE_TEMPLATE/: config.yml
.github/ISSUE_TEMPLATES/: ---bug-report.md  ---question.md
.github/workflows/: closed-issue-message.yml  docs.yml
cli/: CMakeLists.txt  cli.cpp  cli.hpp
cmake/: FindMbedTLS.cmake
common/: ConfigCommon.cpp  ConfigCommon.hpp  RobotArmConfig.json  SampleConfig.json  SwitchConfig.json
docs/: _action_8cpp.html  _action_8hpp.html  _action_8hpp_source.html  _client_8cpp.html  _client_8hpp.html  _client_8hpp_source.html  _client_core_8cpp.html  _client_core_8hpp.html  _client_core_8hpp_source.html  _client_core_state_8cpp.html  _client_core_state_8hpp.html  _client_core_state_8hpp_source.html  _client_state_8cpp.html  _client_state_8hpp.html  _client_state_8hpp_source.html  _common_8cpp.html  _common_8hpp.html  _common_8hpp_source.html  _config_common_8cpp.html  _config_common_8hpp_source.html  _connect_8cpp.html  _connect_8hpp.html  _connect_8hpp_source.html  _console_log_system_8cpp.html  _console_log_system_8hpp.html  _console_log_system_8hpp_source.html  _core___e_x_p_o_r_t_s_8hpp_source.html  _discovery_8cpp.html  _discovery_8hpp.html  _discovery_8hpp_source.html  _discovery_response_8cpp.html  _discovery_response_8hpp.html  _discovery_response_8hpp_source.html  _formatted_log_system_8hpp_source.html  _greengrass_mqtt_client_8hpp.html  _greengrass_mqtt_client_8hpp_source.html  _jobs_8cpp.html  _jobs_8hpp.html  _jobs_8hpp_source.html  _json_parser_8cpp.html  (+146 more)
docs/html/: _formatted_log_system_8cpp.html  _formatted_log_system_8hpp.html  _log_level_8cpp.html  _map_8hpp_source.html  _network_connection_8hpp_source.html  _network_read_8hpp_source.html  _packet_8cpp.html  _packet_8hpp.html  _response_code_8hpp.html  _subscribe_8hpp_source.html  _utf8_string_8hpp_source.html  classawsiotsdk_1_1_action_data.html  classawsiotsdk_1_1_client_core_state_1_1_pending_ack_data.html  classawsiotsdk_1_1_discovery_response.html  classawsiotsdk_1_1_greengrass_mqtt_client.html  classawsiotsdk_1_1_jobs.html  classawsiotsdk_1_1_resubscribe_callback_context_data.html  classawsiotsdk_1_1_shadow.html  classawsiotsdk_1_1_utf8_string.html  classawsiotsdk_1_1mqtt_1_1_disconnect_action_async.html  classawsiotsdk_1_1mqtt_1_1_subscription.html  classawsiotsdk_1_1mqtt_1_1_unsuback_packet.html  classawsiotsdk_1_1util_1_1_logging_1_1_log_system_interface.html  dir_586ad3c2f85d776b984733890d824e3e.html  dir_b7878ad5ecbf2506f4125b9d34c97e45.html  functions_e.html  functions_func.html  functions_func_e.html  functions_func_i.html  functions_func_s.html  functions_t.html  functions_vars.html  globals.html  md__c_o_n_t_r_i_b_u_t_i_n_g.html  namespacemembers_func.html
docs/html/search/: all_0.js  all_1.js  all_11.js  all_9.js  classes_7.js  enumvalues_3.js  enumvalues_6.js  enumvalues_a.js  files_7.js  files_a.js  files_e.js  functions_0.js  functions_10.js  functions_2.js  (+8 more)
docs/search/: all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  (+64 more)
doxygen/: doxygen.conf  doxygen.conf.in  make-docs.py
include/: Action.hpp  ClientCore.hpp  ClientCoreState.hpp  ProxyType.hpp  ResponseCode.hpp
include/awsiotsdk/: NetworkConnection.hpp  ResponseCode.hpp
include/discovery/: Discovery.hpp  DiscoveryResponse.hpp
include/jobs/: Jobs.hpp
include/mqtt/: Client.hpp  ClientState.hpp  Common.hpp  Connect.hpp  GreengrassMqttClient.hpp  NetworkRead.hpp  Packet.hpp  Publish.hpp  Subscribe.hpp
include/shadow/: Shadow.hpp
include/util/: BlockingQueue.hpp  Core_EXPORTS.hpp  JsonParser.hpp  LockedMap.hpp  Utf8String.hpp
network/: CMakeLists-mbedtls.txt.in  CMakeLists.txt.in  README.md
network/MbedTLS/: MbedTLSConnection.cpp  MbedTLSConnection.hpp
network/OpenSSL/: OpenSSLConnection.cpp  OpenSSLConnection.hpp
network/WebSocket/: WebSocketConnection.cpp  WebSocketConnection.hpp
samples/: README.md
samples/Discovery/: CMakeLists.txt  Discovery.cpp  Discovery.hpp
samples/Jobs/: CMakeLists.txt  JobsSample.cpp  JobsSample.hpp
samples/JobsAgent/: CMakeLists.txt  JobsAgent.cpp  JobsAgent.hpp  JobsAgentOperations.cpp
samples/PubSub/: CMakeLists.txt  PubSub.cpp  PubSub.hpp
samples/ShadowDelta/: CMakeLists.txt  ShadowDelta.cpp  ShadowDelta.hpp
samples/StoryRobotArm/: CMakeLists.txt  robotArm.cpp  robotArm.hpp
samples/StorySwitch/: CMakeLists.txt  switch.cpp  switch.hpp
src/: Action.cpp  ClientCore.cpp  ClientCoreState.cpp  NetworkConnection.cpp  ResponseCode.cpp
src/discovery/: Discovery.cpp  DiscoveryResponse.cpp
src/jobs/: Jobs.cpp
src/mqtt/: Client.cpp  ClientState.cpp  Common.cpp  Connect.cpp  GreengrassMqttClient.cpp  NetworkRead.cpp  Packet.cpp  Publish.cpp  Subscribe.cpp
src/shadow/: Shadow.cpp
src/util/: JsonParser.cpp  Utf8String.cpp
tests/: README.md
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists-gtest.txt.in  CMakeLists.txt
tests/unit/include/: JobsMock.hpp  MockNetworkConnection.hpp  TestHelper.hpp
tests/unit/src/: ClientCoreTests.cpp  ConfigCommonTests.cpp  MockNetworkConnection.cpp  ResponseCodeTests.cpp  TestHelper.cpp  TestRunner.cpp
tests/unit/src/discovery/: DiscoveryTests.cpp
tests/unit/src/jobs/: JobsAgentTests.cpp  JobsTests.cpp
tests/unit/src/mqtt/: ClientTests.cpp  ConnectTests.cpp  PublishTests.cpp  SubscribeTests.cpp
tests/unit/src/shadow/: ShadowTests.cpp
tests/unit/src/util/: JsonParserTests.cpp  TestParser.json
(+60 files in other folders)
